--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.8"
   }
 }
